--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
     <div id="logo">PB</div>
   </div>
   <nav id="navbar">
-    <a href="#">Home</a>
+    <a href="index.html">Home</a>
     <a href="#">About</a>
     <a href="#">Projects</a>
     <a href="#">Contact</a>
@@ -94,4 +94,5 @@
     };
   </script>
   </body>
+  heyyy
   </html>
