--- a/index.html
+++ b/index.html
@@ -3,10 +3,100 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <title>My Portfolio</title>
 
   <link rel="stylesheet" href="index.css">
+  <style>
+    footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 60px;
+    width: 100%;
+    font-size: 3em;
+}
 
+        #motivation {
+            font-size: 18px;
+            margin-bottom: 10px;
+            animation: animateText 3s infinite;
+        }
+
+        #contact-links a {
+            text-decoration: none;
+            margin: 0 20px; /* Increased spacing */
+            font-size: 30px; /* Increased font size */
+            transition: color 0.3s;
+        }
+
+        #contact-links a:hover {
+            color: #00ffcc; /* Change to your desired glow color */
+        }
+
+        /* Instagram color animation */
+        #contact-links a.instagram {
+            color: #405de6; /* Instagram blue color */
+            animation: animateInstagram 2s infinite alternate;
+        }
+
+        /* LinkedIn color animation */
+        #contact-links a.linkedin {
+            color: #0077b5; /* LinkedIn blue color */
+            animation: animateLinkedIn 2s infinite alternate;
+        }
+
+        /* GitHub color animation */
+        #contact-links a.github {
+            color: #171515; /* GitHub black color */
+            animation: animateGitHub 2s infinite alternate;
+        }
+
+        @keyframes animateText {
+            0%, 100% {
+                opacity: 0.5;
+            }
+            50% {
+                opacity: 1;
+            }
+        }
+
+        @keyframes animateInstagram {
+            0% {
+                color: #405de6;
+            }
+            50% {
+                color: #fb3958; /* Instagram pink color */
+            }
+            100% {
+                color: #405de6;
+            }
+        }
+
+        @keyframes animateLinkedIn {
+            0% {
+                color: #0077b5;
+            }
+            50% {
+                color: #ff7a00; /* LinkedIn orange color */
+            }
+            100% {
+                color: #0077b5;
+            }
+        }
+
+        @keyframes animateGitHub {
+            0% {
+                color: #171515;
+            }
+            50% {
+                color: #f0f0f0; /* GitHub white color */
+            }
+            100% {
+                color: #171515;
+            }
+        }
+  </style>  
 </head>
 <body>
   
@@ -15,8 +105,8 @@
   </div>
   <nav id="navbar">
     <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Projects</a>
+    <a href="about.html">About</a>
+    <a href="works.html">Projects</a>
     <a href="#">Contact</a>
   </nav>
   <button id="toggleBtn">Toggle Mode</button>
@@ -98,5 +188,25 @@
     </div>
     <!-- Add more project cards as needed -->
   </section>
+
+  <footer>
+    <div id="motivation">
+        <p>Stay motivated and keep coding!</p>
+    </div>
+    <div id="contact-links">
+        <!-- Instagram -->
+        <a href="https://www.instagram.com/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+        <!-- LinkedIn -->
+        <a href="https://www.linkedin.com/" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
+        <!-- GitHub -->
+        <a href="https://github.com/" target="_blank" class="github"><i class="fab fa-github"></i></a>
+        <!-- Add more contact links as needed -->
+    </div>
+</footer>
+
+
+
+    
+
 </body>
 </html>
