splash screen check

--- a/index.html
+++ b/index.html
@@ -3,111 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <title>My Portfolio</title>
 
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="container.css">
+  
+  <link rel="stylesheet" href="navbar.css">
+  
   <style>
-    footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 60px;
-    width: 100%;
-    font-size: 3em;
-}
-
-        #motivation {
-            font-size: 18px;
-            margin-bottom: 10px;
-            animation: animateText 3s infinite;
-        }
-
-        #contact-links a {
-            text-decoration: none;
-            margin: 0 20px; /* Increased spacing */
-            font-size: 30px; /* Increased font size */
-            transition: color 0.3s;
-        }
-
-        #contact-links a:hover {
-            color: #00ffcc; /* Change to your desired glow color */
-        }
-
-        /* Instagram color animation */
-        #contact-links a.instagram {
-            color: #405de6; /* Instagram blue color */
-            animation: animateInstagram 2s infinite alternate;
-        }
-
-        /* LinkedIn color animation */
-        #contact-links a.linkedin {
-            color: #0077b5; /* LinkedIn blue color */
-            animation: animateLinkedIn 2s infinite alternate;
-        }
-
-        /* GitHub color animation */
-        #contact-links a.github {
-            color: #171515; /* GitHub black color */
-            animation: animateGitHub 2s infinite alternate;
-        }
-
-        @keyframes animateText {
-            0%, 100% {
-                opacity: 0.5;
-            }
-            50% {
-                opacity: 1;
-            }
-        }
-
-        @keyframes animateInstagram {
-            0% {
-                color: #405de6;
-            }
-            50% {
-                color: #fb3958; /* Instagram pink color */
-            }
-            100% {
-                color: #405de6;
-            }
-        }
-
-        @keyframes animateLinkedIn {
-            0% {
-                color: #0077b5;
-            }
-            50% {
-                color: #ff7a00; /* LinkedIn orange color */
-            }
-            100% {
-                color: #0077b5;
-            }
-        }
-
-        @keyframes animateGitHub {
-            0% {
-                color: #171515;
-            }
-            50% {
-                color: #f0f0f0; /* GitHub white color */
-            }
-            100% {
-                color: #171515;
-            }
-        }
+   
   </style>  
 </head>
 <body>
-  
+  <div id="splash-screen">
+    <!-- Include the contents of animate_splashscreen.html here -->
+  </div>
+
+  <script>
+    window.onload = function() {
+      document.getElementById('splash-screen').style.display = 'none';
+      document.getElementById('content').style.display = 'block';
+    }
+  </script>
+
+  <!-- The rest of your website's content goes here -->
+
+
 <div id="logo-container">
     <div id="logo">PB</div>
   </div>
   <nav id="navbar">
-    <a href="#">Home</a>
-    <a href="about.html">About</a>
+    <a href="#" >Home</a>
+    <a href="about.html" id="about" onclick="navigateToAbout()">About</a>
+    <div id="overlay"></div> 
+    <script src="navbar.js"></script>
     <a href="works.html">Projects</a>
-    <a href="#">Contact</a>
+    <a href="contacts.html">Contact</a>
   </nav>
   <button id="toggleBtn">Toggle Mode</button>
   <script>
@@ -186,7 +120,21 @@
       <h3>Project 2</h3>
       <p>Description of Project 2.</p>
     </div>
+
+    <div class="project-card">
+      <div class="half left">
+        <h3>Project 1</h3>
+      </div>
+      <div class="half right">
+        <p>Description of Project 1.</p>
+      </div>
+    </div>
+    
+    <button id="showMoreBtn" onclick="navigateToWorks()">More Projects</button>
+    <div id="overlay"></div>
+<script src="viewmore.js"></script>
     <!-- Add more project cards as needed -->
+    
   </section>
 
   <footer>
