--- a/contacts.html
+++ b/contacts.html
@@ -3,71 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="container.css">
+  <link rel="stylesheet" href="viewmore.css">
+  <link rel="stylesheet" href="navbar.css">
+  
+
+
+
   <title>My Portfolio</title>
   <style>
-  body
-   nav {
-      position: fixed;
-      display: flex;
-      align-items: center;
-      top: 0;
-      right: 0;
-      background-color: transparent;
-      overflow: hidden;
-      transition: 0.5s;
-    }
-
-    nav a {
-      float: right;
-      display: block;
-      color: #333;
-      text-align: center;
-      cursor: pointer;
-      padding: 14px 16px;
-      text-decoration: none;
-    }
-
-    nav a:hover {
-      background-color: #ddd;
-      padding: 1px;
-      text-decoration: line-through;
-      color: black;
-    }
-
-    .show-nav {
-      max-height: 200px;
-    }
-
-    @media screen and (max-width: 600px) {
-      nav a {
-        float: none;
-        width: 100%;
-      }
-    }
+     
     
-     #logo-container {
-      position: fixed;
-      top: 20px;
-      left: 20px; /* Change right to left */
-      cursor: pointer;
-      z-index: 1000; /* Ensure it's above other elements */
-    }
-
-    #logo {
-      display: inline-block;
-      font-family: 'Arial', sans-serif;
-      font-weight: bold;
-      font-size: 70px;
-      color: transparent;
-      background: linear-gradient(45deg, #FFD700, #FFA500); /* Golden yellowish gradient */
-      background-clip: text; /* Clip the background to text */
-      -webkit-background-clip: text; /* For Safari */
-      transition: transform 0.2s ease; /* Add a smooth transform animation */
-    }
-
-    #logo:hover {
-      transform: scale(1.1); /* Scale up on hover */
-    }
+  
     </style>
     </head>
     <body>
@@ -76,12 +26,14 @@
     <div id="logo">PB</div>
   </div>
   <nav id="navbar">
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Projects</a>
-    <a href="#">Contact</a>
+    <a href="index.html" >Home</a>
+    <a href="about.html" id="about" onclick="navigateToAbout()">About</a>
+    <div id="overlay"></div> 
+    <script src="navbar.js"></script>
+    <a href="works.html">Projects</a>
+    <a href="contacts.html">Contact</a>
   </nav>
-
+  <button id="toggleBtn">Toggle Mode</button>
   <script>
     const navbar = document.getElementById('navbar');
 
@@ -93,5 +45,60 @@
       }
     };
   </script>
+
+  <br>
+  <br>
+  <br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<h1>heyyyy</h1>
+
+
+
+
+
+
+
+
+
+<footer>
+  <div id="motivation">
+      <p>Stay motivated and keep coding!</p>
+  </div>
+  <div id="contact-links">
+      <!-- Instagram -->
+      <a href="https://www.instagram.com/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+      <!-- LinkedIn -->
+      <a href="https://www.linkedin.com/" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
+      <!-- GitHub -->
+      <a href="https://github.com/" target="_blank" class="github"><i class="fab fa-github"></i></a>
+      <!-- Add more contact links as needed -->
+  </div>
+</footer>
+
+
+
+
+  
+
+
+
+
+
+
   </body>
   </html>
+
